# Brill

./: .gitignore  .gitpod.dockerfile  .gitpod.yml  .travis.yml  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  meson.build
include/: brill_version.h.in  meson.build
include/brill/: Compiler.h  CompilerOptions.h  SourceManager.h
include/brill/AST/: Node.h  ParseTreeVisitor.h
include/brill/Diagnostics/: Diagnostic.h  DiagnosticsEngine.h
lib/: meson.build
lib/brill/: Compiler.cpp  SourceManager.cpp
lib/brill/AST/: ParseTreeVisitor.cpp
lib/brill/Diagnostics/: DiagnosticsEngine.cpp
src/: CMakeLists.txt  build.ninja  main.cpp  meson.build
src/builder/: build.ninja
src/lang/: Brill.g4  BrillParseTreeListener.cpp  BrillParseTreeListener.h  CMakeLists.txt  brill.cpp  brill.h  brill.pc.in  build.ninja  compiler.cpp  compiler.h  meson.build
src/lang/ast/: CMakeLists.txt  ast.h  expression.cpp  expression.h  meson.build  module.cpp  module.h  named_node.cpp  named_node.h  node.cpp  node.h  symbol_table.cpp  symbol_table.h  value_wrapper.cpp  value_wrapper.h
src/lang/ast/abstract/: codegen_context.cpp  codegen_context.h  convert_context.cpp  convert_context.h
src/lang/ast/container/: container.h  function_container.cpp  function_container.h  statement_container.cpp  statement_container.h
src/lang/ast/diagnostic/: compiler_diagnostics.cpp  compiler_diagnostics.h  issue.cpp  issue.h
src/lang/ast/expression/: expression.cpp  expression.h  prefix_expression.cpp  prefix_expression.h
src/lang/ast/expression/postfix/: function_call_argument.cpp  function_call_argument.h  function_call_expression.cpp  function_call_expression.h  postfix_base_expression.cpp  postfix_base_expression.h  postfix_dot_expression.cpp  postfix_dot_expression.h  postfix_expression.cpp  postfix_expression.h  postfix_function_expression.cpp  postfix_function_expression.h  postfix_post_expression.cpp  postfix_post_expression.h  postfix_primary_expression.cpp  postfix_primary_expression.h
src/lang/ast/expression/primary/: primary_expression.cpp  primary_expression.h  primary_identifier_expression.cpp  primary_identifier_expression.h
src/lang/ast/expression/primary/literal/: literal_expression.cpp  literal_expression.h  literal_literal_expression.cpp  literal_literal_expression.h
src/lang/ast/function/: function.cpp  function.h  parameter.cpp  parameter.h
src/lang/ast/literal/: literal.cpp  literal.h  string_literal.cpp  string_literal.h
src/lang/ast/statement/: expression_statement.cpp  expression_statement.h  statement.cpp  statement.h
src/lang/ast/type/: type.cpp  type.h  type_annotation.cpp  type_annotation.h  type_identifier.cpp  type_identifier.h
src/lang/bir/: CMakeLists.txt  bir.cpp  bir.h  convert.h  tree.h
src/lang/bir/abstract/name/: mangleable.h  name.h  parented_name.h
src/lang/bir/abstract/name/impl/: class_name.cpp  class_name.h  enum_name.cpp  enum_name.h  extension_name.cpp  extension_name.h  function_name.cpp  function_name.h  module_name.cpp  module_name.h  protocol_name.cpp  protocol_name.h  struct_name.cpp  struct_name.h  variable_name.cpp  variable_name.h
src/lang/bir/convert/: top_level.cpp  top_level.h
src/lang/bir/convert/expression/: expression.cpp  expression.h  prefix_expression.cpp  prefix_expression.h
src/lang/bir/convert/expression/literal/: literal.cpp  literal.h  string_literal.cpp  string_literal.h
src/lang/bir/convert/expression/postfix/: function_call_expression.cpp  function_call_expression.h  postfix_expression.cpp  postfix_expression.h
src/lang/bir/convert/expression/primary/: identifier_expression.cpp  identifier_expression.h  literal_expression.cpp  literal_expression.h  primary_expression.cpp  primary_expression.h
src/lang/bir/convert/function/: argument.cpp  argument.h  function.cpp  function.h
src/lang/bir/convert/statement/: statement.cpp  statement.h
src/lang/bir/tree/: module.cpp  module.h  modules.cpp  modules.h  type.h
src/lang/bir/tree/abstract/: code_block.h  code_generator.h  named.h
src/lang/bir/tree/abstract/codegen/: code_generator.h  codegen_context.h  named_code_generator.h  value_generator.h
src/lang/bir/tree/constructs/: construct.h
src/lang/bir/tree/constructs/class/: class.h
src/lang/bir/tree/constructs/enum/: enum.h
src/lang/bir/tree/constructs/extension/: extension.h
src/lang/bir/tree/constructs/protocol/: protocol.h
src/lang/bir/tree/constructs/struct/: struct.h
src/lang/bir/tree/container/: class_container.cpp  class_container.h  container.h  enum_container.h  extension_container.h  function_container.cpp  function_container.h  protocol_container.h  statement_container.cpp  statement_container.h  struct_container.h  variable_container.h
src/lang/bir/tree/declarations/: declaration.h
src/lang/bir/tree/declarations/impl/: import_declaration.cpp  import_declaration.h
src/lang/bir/tree/expression/: expression.cpp  expression.h  prefix_expression.cpp  prefix_expression.h
src/lang/bir/tree/expression/constant/: string_constant.cpp  string_constant.h
src/lang/bir/tree/expression/literal/: literal.h  string_literal.cpp  string_literal.h
src/lang/bir/tree/expression/postfix/: explicit_member_expression.cpp  function_call_expression.cpp  function_call_expression.h  initializer_expression.cpp  optional_chaining_expression.cpp  postfix_expression.h  postfix_operator_expression.cpp  postfix_primary_expression.cpp  postfix_primary_expression.h  postfix_self_expression.cpp  subscript_expression.cpp
src/lang/bir/tree/expression/primary/: identifier_expression.cpp  (+5 more)
src/lang/bir/tree/function/: argument.cpp  argument.h  function.cpp  function.h
src/lang/bir/tree/statement/: call_statement.cpp  call_statement.h  expression_statement.cpp  expression_statement.h  statement.h
src/lang/bir/tree/statements/: statement.h
src/lang/bir/tree/symbol/: symbol.h  symbol_table.h
src/lang/bir/tree/variable/: variable.cpp  variable.h
src/lang/codegen/: codegen.cpp  codegen.h
src/modulemap/: ModuleMap.g4
src/util/: illegal_state_exception.h  not_implemented_exception.h  util.h
(+23 files in other folders)
