ast_inc = include_directories('.')

ast_src = files('node.cpp',
    'named_node.cpp',
    'symbol_table.cpp',
    'value_wrapper.cpp',
    'module.cpp',
    'container/statement_container.cpp',
    'container/function_container.cpp',
    'diagnostic/issue.cpp',
    'diagnostic/compiler_diagnostics.cpp',
    'type/type_annotation.cpp',
    'type/type.cpp',
    'type/type_identifier.cpp',
    'statement/statement.cpp',
    'statement/expression_statement.cpp',
    'expression/expression.cpp',
    'expression/prefix_expression.cpp',
    'expression/postfix/postfix_expression.cpp',
    'expression/postfix/postfix_primary_expression.cpp',
    'expression/postfix/function_call_argument.cpp',
    'expression/postfix/function_call_expression.cpp',
    'expression/primary/primary_expression.cpp',
    'expression/primary/primary_identifier_expression.cpp',
    'expression/primary/literal/literal_expression.cpp',
    'expression/primary/literal/literal_literal_expression.cpp',
    'function/function.cpp',
    'function/parameter.cpp',
    'abstract/convert_context.cpp',
    'abstract/codegen_context.cpp',
    'literal/literal.cpp',
    'literal/string_literal.cpp')

ast_lib = library('ast', ast_src, include_directories: [antlr_inc, main_inc, ast_inc, util_inc], dependencies: [thread_dep, llvm_dep, antlr_dep, parser_dep])
